User to Association

--- a/templates/base.html
+++ b/templates/base.html
@@ -337,7 +337,7 @@
               </a>
               <ul class="treeview-menu">              	 
                 <li><a href="{% url 'registration_register' %}"><i class="fa fa-circle-o"></i> Afegir Usuaris</a></li>
-                <li class="active"><a href="index2.html"><i class="fa fa-circle-o"></i> Gestió</a></li>                
+                <li><a href="{% url 'user_to_association' %}"><i class="fa fa-circle-o"></i> Gestió</a></li>                
               </ul>
             </li>
             {% endif %}            
