--- a/templates/base.html
+++ b/templates/base.html
@@ -24,11 +24,11 @@
     <!-- AdminLTE Skins. Choose a skin from the css/skins 
          folder instead of downloading all of them to reduce the load. -->
     <link href="{% static "dist/css/skins/_all-skins.min.css" %}" rel="stylesheet" type="text/css" />
-    
     <!-- jQuery 2.1.3 -->
     <script src="{% static "plugins/jQuery/jQuery-2.1.3.min.js" %}"></script>
     <!-- Bootstrap 3.3.2 JS -->
     <script src="{% static "bootstrap/js/bootstrap.min.js" %}" type="text/javascript"></script>
+   
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -333,7 +333,7 @@
             {% if user.is_superuser %}
             <li class="active treeview">
               <a href="#">
-                <i class="fa fa-dashboard"></i> <span>Gestió d'Usuaris</span> <i class="fa fa-angle-left pull-right"></i>
+                <i class="fa fa-user"></i> <span>Gestió d'Usuaris</span> <i class="fa fa-angle-left pull-right"></i>
               </a>
               <ul class="treeview-menu">              	 
                 <li><a href="{% url 'registration_register' %}"><i class="fa fa-circle-o"></i> Afegir Usuaris</a></li>
