--- a/templates/association.html
+++ b/templates/association.html
@@ -172,15 +172,15 @@
 		                    <div class="col-md-4">
 		                      <ul class="chart-legend clearfix">
 		                        <li><i class="fa fa-circle-o text-red"></i> Efectiu</li>
-		                        <li><i class="fa fa-circle-o text-green"></i> Bancari</li>
+		                        <li><i class="fa fa-circle-o text-green"></i> Banc</li>
 		                      </ul>
 		                    </div><!-- /.col -->
 		                  </div><!-- /.row -->
 		                </div><!-- /.box-body -->
 		                <div class="box-footer no-padding">
 		                  <ul class="nav nav-pills nav-stacked">
-		                    <li><a href="#">Efectiu <span class="pull-right text-red"><i class="fa fa-angle-down"></i> 12%</span></a></li>
-		                    <li><a href="#">salesChart <span class="pull-right text-green"><i class="fa fa-angle-up"></i> 4%</span></a></li>
+		                    <li><a href="#">Efectiu <span class="pull-right text-red"> {{ percent_totalEfectiu }}</span></a></li>
+		                    <li><a href="#">salesChart <span class="pull-right text-green"> {{ percent_totalBanc }}%</span></a></li>
 						</ul>
 		                </div><!-- /.footer -->
 		              </div><!-- /.box -->
@@ -196,7 +196,61 @@
 					});
 					
 					$("#ufs").dataTable();
-					})        	
+					})     
+					
+				  //-------------
+				  //- PIE CHART -
+				  //-------------
+				  // Get context with jQuery - using jQuery's .get() method.
+				  var pieChartCanvas = $("#pieChart").get(0).getContext("2d");
+				  var pieChart = new Chart(pieChartCanvas);
+				  var PieData = [
+				    {
+				      value: {{ totalEfectiu }},
+				      color: "#f56954",
+				      highlight: "#f56954",
+				      label: "Efectiu"
+				    },
+				    {
+				      value: {{ totalBanc }},
+				      color: "#00a65a",
+				      highlight: "#00a65a",
+				      label: "Banc"
+				    }
+				  ];
+				  var pieOptions = {
+				    //Boolean - Whether we should show a stroke on each segment
+				    segmentShowStroke: true,
+				    //String - The colour of each segment stroke
+				    segmentStrokeColor: "#fff",
+				    //Number - The width of each segment stroke
+				    segmentStrokeWidth: 1,
+				    //Number - The percentage of the chart that we cut out of the middle
+				    percentageInnerCutout: 50, // This is 0 for Pie charts
+				    //Number - Amount of animation steps
+				    animationSteps: 100,
+				    //String - Animation easing effect
+				    animationEasing: "easeOutBounce",
+				    //Boolean - Whether we animate the rotation of the Doughnut
+				    animateRotate: true,
+				    //Boolean - Whether we animate scaling the Doughnut from the centre
+				    animateScale: false,
+				    //Boolean - whether to make the chart responsive to window resizing
+				    responsive: true,
+				    // Boolean - whether to maintain the starting aspect ratio or not when responsive, if set to false, will take up entire container
+				    maintainAspectRatio: false,
+				    //String - A legend template
+				    legendTemplate: "<ul class=\"<%=name.toLowerCase()%>-legend\"><% for (var i=0; i<segments.length; i++){%><li><span style=\"background-color:<%=segments[i].fillColor%>\"></span><%if(segments[i].label){%><%=segments[i].label%><%}%></li><%}%></ul>",
+				    //String - A tooltip template
+				    tooltipTemplate: "<%=value %> <%=label%> users"
+				  };
+				  //Create pie or douhnut chart
+				  // You can switch between pie and douhnut using the method below.  
+				  pieChart.Doughnut(PieData, pieOptions);
+				  //-----------------
+				  //- END PIE CHART -
+				  //-----------------
+					   	
         </script>
         
 {% endblock %}
