--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,7 +6,7 @@
 
     <div class="login-box">
       <div class="login-logo">
-        <a href="/assocr"><b>Admin</b>LTE</a>
+        <a href="/assocr"><b>Assoc</b>R</a>
       </div><!-- /.login-logo -->
       <div class="login-box-body">
         <p class="login-box-msg">Sign in to start your session</p>              	  
