--- a/templates/association.html
+++ b/templates/association.html
@@ -86,7 +86,7 @@
           	</div> <!-- /.col -->
          </div> <!-- /.row -->
          
-         <!-- table data -->       
+        <!-- table data -->       
         <div class="row">
 	          <div class="col-md-12">
 	              <div class="box box-warning">
@@ -101,8 +101,9 @@
 	                		<!-- Buttons -->
 		                	<div class="col-xs-12">				              
 				              <a href="{% url 'add_uf' association.id %}" class="btn btn-default pull-right"><i class="fa fa-plus"></i> Afegir Unitat Familiar</a>
+				              <button type="button" class="btn btn-default pull-right" data-toggle="modal" data-target="#GenerateReceiptsModal"><i class="fa fa-magic"></i> Generar Rebuts</button>
 				              <a href="{% url 'members_export' association.id %}" class="btn btn-default pull-right"><i class="fa fa-download"></i> Exportar Socis</a>
-				              <a href="{% url 'members_import' association.id %}" class="btn btn-default pull-right"><i class="fa fa-upload"></i> Importar Socis</a>
+				              <a href="{% url 'members_import' association.id %}" class="btn btn-default pull-right"><i class="fa fa-upload"></i> Importar Socis</a>				              
 				            </div>
 		                	<!-- Table -->
 							<div class="col-xs-12 table-responsive" style="padding-top: 10px;">
@@ -153,7 +154,7 @@
 	           	</div><!-- /.col -->       
            </div><!-- /.row -->        
 		
-		 <div class="row">
+		<div class="row">
 	          <div class="col-md-12">
 				<div class="box box-default">
 		                <div class="box-header with-border">
@@ -180,17 +181,49 @@
 		                <div class="box-footer no-padding">
 		                  <ul class="nav nav-pills nav-stacked">
 		                    <li><a href="#">Efectiu <span class="pull-right text-red"> {{ percent_totalEfectiu }}</span></a></li>
-		                    <li><a href="#">salesChart <span class="pull-right text-green"> {{ percent_totalBanc }}%</span></a></li>
+		                    <li><a href="#">Banc <span class="pull-right text-green"> {{ percent_totalBanc }}%</span></a></li>
 						</ul>
 		                </div><!-- /.footer -->
 		              </div><!-- /.box -->
 		         </div><!-- /.col -->       
            </div><!-- /.row -->    
 
+		<!-- Modal -->
+		<div class="modal fade" id="GenerateReceiptsModal" tabindex="-1" role="dialog" aria-labelledby="GenerateReceiptsModalLabel" aria-hidden="true">
+		  <div class="modal-dialog">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		        <h4 class="modal-title" id="myModalLabel"><i class="fa fa-magic"></i>Generació Automatica de Rebuts</h4>
+		      </div>
+		      <div class="modal-body">
+		        Es generaran els rebuts per a totes les Unitats Familiar actuals per a l'any actual ({% now "Y" %}).
+		        Está segur que vol generar-los? (Es sobreescriuran tots els rebuts generats actualment referents al {% now "Y" %} )
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+		        <a name="btngeneratereceipts" data-dismiss="modal" class="btn btn-primary">Generar</a>
+		      </div>
+		    </div>
+		  </div>
+		</div>
+
         <div class="clearfix"></div>        
         
         <script>
         	jQuery(function($) {
+        			$('a[name=btngeneratereceipts]').click(function(){
+				        user_id = $(this).val();
+				        request_url = '/assocr/generate_receipts/' + {{ association.id }} + '/';
+				        $.ajax({
+				            url: request_url,
+				            success: function(data){
+				            	$('#GenerateReceiptsModal').modal('hide');				            					            					            
+				                $('#messages').append('<div class="alert alert-success alert-dismissable"><button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button><h4><i class="icon fa fa-check"></i> Alert!</h4>' + data.success + '</div>');
+				            }
+				        })
+				    })        		
+        		
 					$("tr[data-link]").click(function() {
 						window.location = this.dataset.link
 					});
@@ -239,11 +272,7 @@
 				    responsive: true,
 				    // Boolean - whether to maintain the starting aspect ratio or not when responsive, if set to false, will take up entire container
 				    maintainAspectRatio: false,
-				    //String - A legend template
-				    legendTemplate: "<ul class=\"<%=name.toLowerCase()%>-legend\"><% for (var i=0; i<segments.length; i++){%><li><span style=\"background-color:<%=segments[i].fillColor%>\"></span><%if(segments[i].label){%><%=segments[i].label%><%}%></li><%}%></ul>",
-				    //String - A tooltip template
-				    tooltipTemplate: "<%=value %> <%=label%> users"
-				  };
+				    };
 				  //Create pie or douhnut chart
 				  // You can switch between pie and douhnut using the method below.  
 				  pieChart.Doughnut(PieData, pieOptions);
