--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,8 @@
     <script src="{% static "plugins/jQuery/jQuery-2.1.3.min.js" %}"></script>
     <!-- Bootstrap 3.3.2 JS -->
     <script src="{% static "bootstrap/js/bootstrap.min.js" %}" type="text/javascript"></script>
+     <!-- ChartJS 1.0.1 -->
+    <script src="{% static "plugins/chartjs/Chart.min.js" %}" type="text/javascript"></script>
    
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -375,7 +377,7 @@
 			<div class="row">
 				<div class="col-md-2">
 				</div>
-				<div class="col-md-8">
+				<div class="col-md-8" id="messages">
 					{% if messages %}
 						{% for message in messages %}
 							{% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
@@ -447,8 +449,7 @@
     <script src="{% static "plugins/slimScroll/jquery.slimscroll.min.js" %}" type="text/javascript"></script>
     
     <script src="{% static "dist/js/pages/dashboard2.js" %}" type="text/javascript"></script>
-    <!-- ChartJS 1.0.1 -->
-    <script src="{% static "plugins/chartjs/Chart.min.js" %}" type="text/javascript"></script>
+   
 	
     
     
