--- a/templates/uf.html
+++ b/templates/uf.html
@@ -19,7 +19,9 @@
             	<div class="box box-primary">
 	                <div class="box-header with-border">
 	                  <h4>
-		                <i class="fa fa-globe"></i> UF - <b>#{{ uf.id }}</b> <a href="{% url 'edit_uf' uf.association.id uf.id %}" class="btn btn-default"><i class="fa fa-edit"></i> Editar</a>		            
+		                <i class="fa fa-globe"></i> UF - <b>#{{ uf.id }}</b> 
+		                <a href="{% url 'edit_uf' uf.association.id uf.id %}" class="btn btn-default"><i class="fa fa-edit"></i> Editar</a>
+		                <a href="{% url 'edit_uf' uf.association.id uf.id %}" class="btn btn-default"><i class="fa fa-trash-o"></i> Donar de Baixa</a>		            
 		              </h4> 
 	                  <div class="box-tools pull-right">
 	                    <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
@@ -87,7 +89,12 @@
 				                    <td>{{ member.dni }}</td>
 				                    <td>{{ member.birthdaydate }}</td>
 				                    <td>{{ member.city }}</td> <!-- {{ uf.typequote }} -->	                    
-				                    <td><span class="label label-success">SI</span></td>	                 
+				                    <td>
+				                    	{% if member.fcbmember %}
+				                    		<span class="label label-success">Si - {{ member.fcbnumber }}</span></td>	
+				                    	{% else %}
+				                    		<span class="label label-danger">No</span></td>
+				                    	{% endif %}				                    	                 
 			                  	 </tr>
 			                  {% endfor %}            
 			                </tbody>
@@ -103,6 +110,51 @@
               </div><!-- /.box -->
           </div> <!-- /.col -->      
           </div> <!-- /.row -->
+          
+          <div class="row">
+          	<div class="col-xs-12">
+          	 <div class="box box-danger">
+                <div class="box-header with-border">
+                  <h3 class="box-title">Rebuts</h3>
+                  <div class="box-tools">
+                    <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
+                  </div><!-- /.box-tools -->
+                </div><!-- /.box-header -->
+                <div class="box-body" style="display: block;">
+                	<div class="row">
+	                	<div class="col-xs-12"> 
+            				<a href="{% url 'add_receipt' idassociation uf.id %}" class="btn btn-default pull-right"><i class="fa fa-plus"></i> Afegir Rebut</a>           
+			            </div>
+			            <div class="col-xs-12 table-responsive" style="padding-top: 10px;">              
+			              <table class="table table-bordered table-hover" id="members">
+			                <thead>
+			                  <tr>
+			                    <th>Any</th>
+			                    <th>Estat</th>
+			                  </tr>
+			                </thead>
+			                <tbody>
+			                    {% for receipt in receipts %}
+			                	 <tr data-link="{% url 'edit_receipt' uf.association.id uf.id receipt.id %}">
+				                    <td>{{ receipt.year }}</td>		
+				                    {% if receipt.state == 1 %}		                                   
+				                    	<td><span class="label label-primary">Enviat</span></td>
+				                    {% elif receipt.state == 2 %}		
+				                    	<td><span class="label label-danger">Retornat</span></td> 
+				                    {% elif receipt.state == 3 %}		
+				                    	<td><span class="label label-success">Pagat</span></td>
+				                    {% endif %}                 
+			                  	 </tr>
+			                  {% endfor %}            
+			                </tbody>
+			              </table>
+			 			</div>	
+		 			</div> <!-- /.row -->
+ 				</div><!-- /.box-body -->
+              </div><!-- /.box -->
+          </div> <!-- /.col -->      
+          </div> <!-- /.row -->
+
 
         <div class="clearfix"></div>
         
